<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:backgroundTint="@color/white">

        <com.sinata.common.ui.view.IconFontTextView
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:textSize="@dimen/sp_24"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/if_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/title_register"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:gravity="center"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/d1d2"/>


    <com.sinata.common.ui.view.InputItemLayout
        android:id="@+id/input_item_order_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:title="@string/input_item_class_order_no"
        app:hint="@string/input_item_hint_class_order_no"
        app:topLineAppearance="@style/lineAppearance"
        app:bottomLineAppearance="@style/leftMargin_lineAppearance"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_10"/>

    <com.sinata.common.ui.view.InputItemLayout
        android:id="@+id/input_item_moocId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:title="@string/input_item_moocid"
        app:hint="@string/input_item_hint_moocid"
        app:topLineAppearance="@style/lineAppearance"
        app:bottomLineAppearance="@style/leftMargin_lineAppearance"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_10"/>


    <com.sinata.common.ui.view.InputItemLayout
        android:id="@+id/input_item_user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:title="@string/input_item_user_name"
        app:hint="@string/input_item_hint_user_name"
        app:topLineAppearance="@style/lineAppearance"
        app:bottomLineAppearance="@style/leftMargin_lineAppearance"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_10"/>


    <com.sinata.common.ui.view.InputItemLayout
        android:id="@+id/input_item_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:title="@string/input_item_title_password"
        app:hint="@string/input_item_hint_password"
        app:topLineAppearance="@style/lineAppearance"
        app:bottomLineAppearance="@style/lineAppearance"
        android:background="@color/white"
        android:paddingLeft="16dp"
        app:inputType="password"
        />


    <com.sinata.common.ui.view.InputItemLayout
        android:id="@+id/input_item_repassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:title="@string/input_item_confirm_password"
        app:hint="@string/input_item_hint_confirm_password"
        app:topLineAppearance="@style/lineAppearance"
        app:bottomLineAppearance="@style/leftMargin_lineAppearance"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_10"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_login"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_register"
        android:textSize="@dimen/sp_16"
        app:cornerRadius="@dimen/dp_6"
        android:backgroundTint="@color/color_dd2"/>



</LinearLayout>