<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <include>

    </include>

    <activity android:name="com.sinata.framework.camera.CameraDemoActivity"
        app:action="@string/appbar_scrolling_view_behavior"
        app:data="@string/appbar_scrolling_view_behavior">
    </activity>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sinata.framework.lifecycleDemo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sinata.framework.lifecycleDemo.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sinata.framework.lifecycleDemo.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>